cluster/apps/kube-system/registry/manifests.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: container-registry
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: container-registry
      app.kubernetes.io/name: container-registry
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: container-registry
        app.kubernetes.io/name: container-registry
    spec:
      containers:
      - env:
        - name: TZ
          value: Africa/Johannesburg
        - name: REGISTRY_AUTH
          value: "htpasswd"
        - name: REGISTRY_AUTH_HTPASSWD_REALM
          value: "Registry Realm"
        - name: REGISTRY_AUTH_HTPASSWD_PATH
          value: "/auth/htpasswd"
        image: registry:2.8.1
        name: container-registry
        ports:
        - containerPort: 5000
          name: registry
          protocol: TCP
        volumeMounts:
        - mountPath: "/var/lib/registry"
          name: registry-vol
        - mountPath: "/auth"
          name: auth-vol
      volumes:
      - name: registry-vol
        persistentVolumeClaim:
          claimName: container-reg-pvc
      - name: auth-vol
        secret:
          secretName: container-registry-auth-secret
          defaultMode: 420

---

apiVersion: v1
kind: Service
metadata:
  name: container-registry
  namespace: kube-system
spec:
  selector:
    app.kubernetes.io/name: container-registry
  ports:
  - port: 5000
    targetPort: 5000
